# proj-todo

./: 11.txt  12.txt  1356.txt  15.txt  22.txt  README.md  asdf.txt  pyproject.toml  tasks.json
Inyoung/: pyproject.toml
Inyoung/src/: main.py
boramson/: .gitignore  README.md  pyproject.toml
boramson/src/: main.py
boramson/src/custom_controls/: check_status.py  my_button.py  task_to-do.py
boramson/src/layout/: layout_app_bar_bottom.py  layout_app_bar_top.py
boramson/src/navigation/: nav_drawer.py
boramson/src/pages/: to_do_list.py
boramson/src/utils/: task.py  to_do.py
euntaek/: .gitignore  README.md  biome.json  lefthook.yaml.bak  package.json  turbo.json
euntaek/apps/backend/: biome.json  compression-polyfill.ts  database.db  drizzle.config.ts  package.json  tsconfig.json
euntaek/apps/backend/drizzle/: 0000_concerned_siren.sql
euntaek/apps/backend/drizzle/meta/: 0000_snapshot.json  _journal.json
euntaek/apps/backend/src/: env.ts  index.ts
euntaek/apps/backend/src/db/: index.ts  schema.ts
euntaek/apps/backend/src/lib/: password.ts
euntaek/apps/backend/src/server/: auth.ts  todos.ts
euntaek/apps/frontend/: README.md  package.json  pyproject.toml
euntaek/apps/frontend/src/: main.py  router.py  router2.py
euntaek/docs/: mermaid.md
myapp/: README.md  pyproject.toml
myapp/src/: main.py
