[project]
name = "frontend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Flet developer", email = "you@example.com" }]
dependencies = [
    "flet==0.28.2",
    "requests>=2.32.3",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "frontend"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = ["flet[all]==0.28.2", "poethepoet>=0.34.0", "ruff>=0.11.10"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = { extras = ["all"], version = "0.28.2" }

[tool.poe.tasks]
dev = "flet run -d"
dev-web = "flet run -d --web --port 8080"
format = "ruff format"
lint = "ruff check --fix"
